buildNumber retrieval changes